--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,3 +1,4 @@
+{{ if eq .chezmoi.hostname "MacBookPro" }}
 fpath=(/opt/homebrew/share/zsh/site-functions $fpath)
 # autoload -Uz compinit
 # compinit -D
@@ -21,6 +22,7 @@ export PATH="$HOME/.dotnet/tools:$PATH"
 ### MANAGED BY RANCHER DESKTOP START (DO NOT EDIT)
 export PATH="/Users/n20amaral/.rd/bin:$PATH"
 ### MANAGED BY RANCHER DESKTOP END (DO NOT EDIT)
+{{ end }}
 
 eval "$(oh-my-posh init zsh --config 'https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/nordtron.omp.json')"
 
