add lang env vars

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -26,6 +26,8 @@ export PATH="/Users/n20amaral/.rd/bin:$PATH"
 eval "$(oh-my-posh init zsh --config 'https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/nordtron.omp.json')"
 
 {{ end }}
+export LANG=en_US.UTF-8
+export LC_ALL=en_US.UTF-8
 
 alias k=kubectl
 set -o vi
